Ajustando casos de teste de criação de infração