@@ -1,9 +1,6 @@
 package com.picpay.banking.pix.core.usecase.infraction;
 
 import com.picpay.banking.pix.core.domain.infraction.InfractionReport;
-import com.picpay.banking.pix.core.domain.infraction.InfractionReportSituation;
-import com.picpay.banking.pix.core.exception.InfractionReportError;
-import com.picpay.banking.pix.core.exception.InfractionReportException;
 import com.picpay.banking.pix.core.ports.infraction.CreateInfractionReportPort;
 import com.picpay.banking.pix.core.ports.infraction.InfractionReportFindPort;
 import com.picpay.banking.pix.core.ports.infraction.InfractionReportSavePort;
@@ -11,8 +8,8 @@ import com.picpay.banking.pix.core.validators.idempotency.IdempotencyValidator;
 import lombok.AllArgsConstructor;
 import lombok.NonNull;
 import lombok.extern.slf4j.Slf4j;
+import net.logstash.logback.encoder.org.apache.commons.lang3.StringUtils;
 
-import java.util.EnumSet;
 import java.util.Optional;
 
 import static net.logstash.logback.argument.StructuredArguments.kv;
@@ -25,16 +22,11 @@ public class CreateInfractionReportUseCase {
     private final InfractionReportSavePort infractionReportSavePort;
     private final InfractionReportFindPort infractionReportFindPort;
     private final IdempotencyValidator<InfractionReport> idempotency;
-    private static final EnumSet<InfractionReportSituation> OPEN_STATES = EnumSet.of(InfractionReportSituation.OPEN,
-                                                                                     InfractionReportSituation.ANALYZED,
-                                                                                     InfractionReportSituation.RECEIVED);
 
-    public InfractionReport execute(@NonNull final InfractionReport infractionReport,
-                                    @NonNull final String requestIdentifier) {
-        if (requestIdentifier.isBlank()) {
+    public InfractionReport execute(@NonNull final InfractionReport infractionReport, final String requestIdentifier) {
+        if (StringUtils.isBlank(requestIdentifier)) {
             throw new IllegalArgumentException("The request identifier cannot be empty");
         }
-
         validateSituation(infractionReport);
         Optional<InfractionReport> existingInfraction = idempotency.validate(requestIdentifier, infractionReport);
         return existingInfraction.orElseGet(() -> create(infractionReport, requestIdentifier));
@@ -57,14 +49,7 @@ public class CreateInfractionReportUseCase {
 
     private void validateSituation(final InfractionReport infractionReport) {
         Optional<InfractionReport> report = infractionReportFindPort.findByEndToEndId(infractionReport.getEndToEndId());
-        report.ifPresent(infraction -> {
-            if (OPEN_STATES.contains(infraction.getSituation()))
-                throw new InfractionReportException(InfractionReportError.INFRACTION_REPORT_ALREADY_OPEN);
-
-            if (infraction.getSituation().equals(InfractionReportSituation.CANCELED)) {
-                throw new InfractionReportException(InfractionReportError.INFRACTION_REPORT_CLOSED);
-            }
-        });
+        report.ifPresent(InfractionReport::validateSituation);
     }
 
 }
